<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".CreateNote">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_note"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_edit"
        android:elevation="4dp"
        android:theme="@android:style/Theme.Holo.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_note"
        app:layout_constraintBottom_toTopOf="@+id/note_body"
        android:layout_marginHorizontal="6dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/text_hint"
        android:textStyle="bold"
        android:hint="@string/title_hint"
        android:backgroundTint="@color/colorStroke"/>

    <EditText
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/title_edit"
        app:layout_constraintBottom_toTopOf="@+id/check_deadline"
        android:layout_marginHorizontal="6dp"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/text_hint"
        android:hint="@string/note_body"
        android:gravity="top"
        android:backgroundTint="@color/colorStroke"/>

    <CheckBox
        android:id="@+id/check_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/note_body"
        app:layout_constraintBottom_toTopOf="@+id/date_line"
        android:layout_marginHorizontal="6dp"
        android:text="@string/deadline_hint"
        android:textColor="@color/text_hint"
        android:buttonTint="@color/colorStroke"/>

    <LinearLayout
        android:id="@+id/date_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/check_deadline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="6dp"
        android:visibility="gone"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorStroke"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:hint="@string/edit_deadline_hint"/>

        <Button
            android:id="@+id/btn_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/ic_calendar" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>